--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@hookform/resolvers": "^5.2.2",
-    "@supabase/supabase-js": "^2.75.0",
+    "@neondatabase/serverless": "^1.0.2",
+    "@stackframe/stack": "^2.8.48",
     "@xstate/react": "^6.0.0",
     "focus-trap-react": "^11.0.4",
     "framer-motion": "^12.23.24",
