--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "migrate": "node scripts/migrate.js",
+    "test:db": "node scripts/test-db.js"
   },
   "dependencies": {
     "@chakra-ui/next-js": "^2.4.2",
@@ -25,6 +27,7 @@
     "react-hook-form": "^7.65.0",
     "react-player": "^3.3.3",
     "sonner": "^2.0.7",
+    "ws": "^8.18.3",
     "xstate": "^5.23.0",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
@@ -34,6 +37,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "typescript": "^5"
