feat: Complete database integration with Drizzle ORM and TanStack Query
- Implemented comprehensive Drizzle ORM schema for all app features
- Integrated TanStack Query for advanced state management
- Created database seeding with mock users and data
- Built complete API routes for all CRUD operations
- Added database-integrated store with real-time sync
- Created demo login page with 3 pre-loaded users
- Implemented type-safe database operations with Typebox validation
- Added React Query DevTools for debugging
- Created comprehensive hooks for data fetching and mutations
- All TypeScript errors fixed and production build successful

Database Features:
- 12 tables supporting all app features
- Achievements catalog with 9 unlockable achievements
- User profiles, stats, tasks, metrics tracking
- Supplement, equipment, and video progress tracking

Tech Stack:
- Drizzle ORM + Neon PostgreSQL
- TanStack Query v5
- Typebox for runtime validation
- Zustand for local state
- Next.js 15 App Router
- Full TypeScript coverage

--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "start": "next start",
     "lint": "eslint",
     "migrate": "node scripts/migrate.js",
-    "test:db": "node scripts/test-db.js"
+    "migrate:full": "node scripts/migrate-comprehensive.js",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
+    "db:seed": "tsx scripts/seed-database.ts",
+    "test:db": "node scripts/test-db.js",
+    "test:db:full": "node scripts/test-db-comprehensive.js",
+    "test:drizzle": "tsx scripts/test-drizzle.ts"
   },
   "dependencies": {
     "@chakra-ui/next-js": "^2.4.2",
@@ -17,8 +23,13 @@
     "@emotion/styled": "^11.14.1",
     "@hookform/resolvers": "^5.2.2",
     "@neondatabase/serverless": "^1.0.2",
+    "@sinclair/typebox": "^0.34.41",
     "@stackframe/stack": "^2.8.48",
+    "@tanstack/react-query": "^5.90.5",
+    "@tanstack/react-query-devtools": "^5.90.2",
     "@xstate/react": "^6.0.0",
+    "drizzle-kit": "^0.31.6",
+    "drizzle-orm": "^0.44.7",
     "focus-trap-react": "^11.0.4",
     "framer-motion": "^12.23.24",
     "next": "15.5.4",
@@ -40,6 +51,7 @@
     "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
+    "tsx": "^4.20.6",
     "typescript": "^5"
   }
 }
