--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
     "drizzle-orm": "^0.44.7",
     "focus-trap-react": "^11.0.4",
     "framer-motion": "^12.23.24",
+    "lucide-react": "^0.553.0",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-hook-form": "^7.65.0",
+    "react-hook-form": "^7.66.0",
     "react-player": "^3.3.3",
     "sonner": "^2.0.7",
     "ws": "^8.18.3",
